config/network-policy/central-application-validator/allow-from-healthcheck.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kyma-project.io--validator-allow-from-health-check
  namespace: system
spec:
  podSelector:
    matchLabels:
      app: central-application-connectivity-validator
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8081
      from: []
